@@ -5,6 +5,8 @@ Ft2 module is more FreeType2 library error agnostic now. For example
 if the glyph doesn't render nothing is displayed, but it should not
 crash the application anymore.
 More 2.1.10 vs. 2.2.1 changes (read the migration notes this time ;).
+Added the 'mrproper' target which does 'make clean' and also removes
+all FT2 related .o/.a files. 
 
 2006-12-04 - johan
 Changed to the latest stable release of FreeType (2.2.1).
